--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "opencv_contrib"]
 	path = opencv_contrib
 	url = https://github.com/Itseez/opencv_contrib.git
+[submodule "tesseract"]
+	path = tesseract
+	url = https://github.com/tesseract-ocr/tesseract
